...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bitcoin Price" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cr6-RV-HNH" userLabel="titleLabel">
                                        <rect key="frame" x="115.5" y="0.0" width="114" height="28"/>
                                        <fontDescription key="fontDescription" name="DINPro-Medium" family="DINPro" pointSize="20"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EOd-U2-kcQ" userLabel="refreshButton">
                                        <rect key="frame" x="317" y="0.0" width="28" height="28"/>
                                        <accessibility key="accessibilityConfiguration" identifier="refreshButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="28" id="dme-Vc-DrP"/>
                                            <constraint firstAttribute="width" constant="28" id="idc-xE-qyb"/>
                                        </constraints>
...
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e7J-MI-7OD" userLabel="footerView" customClass="FooterView" customModule="Bitcoin_Price" customModuleProvider="target">
                                        <rect key="frame" x="15" y="524" width="330" height="45"/>
                                        <subviews>
                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="77c-ts-r1S">
                                                <rect key="frame" x="0.0" y="0.0" width="330" height="45"/>
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WqL-GF-VfH" userLabel="weekButton" customClass="Button" customModule="Bitcoin_Price" customModuleProvider="target">
                                                        <rect key="frame" x="0.0" y="0.0" width="100" height="45"/>
                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="weekButton"/>
                                                        <fontDescription key="fontDescription" name="DINPro-Medium" family="DINPro" pointSize="15"/>
                                                        <state key="normal" title="Week">
                                                            <color key="titleColor" red="0.29803921570000003" green="0.25882352939999997" blue="0.54117647059999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                            <color key="titleColor" red="0.29803921570000003" green="0.25882352939999997" blue="0.54117647059999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
                                                        <connections>
                                                            <action selector="buttonSelect:" destination="e7J-MI-7OD" eventType="touchUpInside" id="aql-md-aCh"/>
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qNG-ll-rIb" userLabel="monthButton" customClass="Button" customModule="Bitcoin_Price" customModuleProvider="target">
                                                        <rect key="frame" x="115" y="0.0" width="100" height="45"/>
                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="monthButton"/>
                                                        <fontDescription key="fontDescription" name="DINPro-Medium" family="DINPro" pointSize="15"/>
                                                        <state key="normal" title="Month">
                                                            <color key="titleColor" red="0.29803921570000003" green="0.25882352939999997" blue="0.54117647059999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                            <color key="titleColor" red="0.29803921570000003" green="0.25882352939999997" blue="0.54117647059999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
                                                        <connections>
                                                            <action selector="buttonSelect:" destination="e7J-MI-7OD" eventType="touchUpInside" id="Sas-SP-zaH"/>
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IzM-8s-rvX" userLabel="yearButton" customClass="Button" customModule="Bitcoin_Price" customModuleProvider="target">
                                                        <rect key="frame" x="230" y="0.0" width="100" height="45"/>
                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="yearButton"/>
                                                        <fontDescription key="fontDescription" name="DINPro-Medium" family="DINPro" pointSize="15"/>
                                                        <state key="normal" title="Year">
                                                            <color key="titleColor" red="0.29803921570000003" green="0.25882352939999997" blue="0.54117647059999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
